--- a/Install
+++ b/Install
@@ -10,6 +10,7 @@
 ###########################################################################
 
 cd `dirname $0`
+export DIR=`pwd`
 
 if [ ! -r Configuration ]
 then
@@ -21,7 +22,7 @@ then
     cp Configuration.default Configuration
 fi
 
-. Configuration
+. ./Configuration
 
 # ---------------------
 ${MKDIR} -p ${DATADIR}
