--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: mgigff3-6-0-26-3
+DATE: 11/20/2025
+STAFF: jer
+CHANGES: 
+wts2-1756/sprt-128 Add Regulated By relationship data to the MGI.gff3 file
+
 TAG: mgigff3-6-0-26-1
 DATE: 11/03/2025
 STAFF: jer
